# Back-End/src/routes/user.route.ts
@@ -8,7 +8,6 @@ const loginService = new LoginService();
 const loginController = new LoginController(loginService);
 
 const userRoute = Router();
-// #swagger.tags = ['User']
 
 const userService = new UserService();
 const userController = new UserController(userService);
@@ -17,71 +16,72 @@ userRoute.post('/user', (req, res) => (
   /* #swagger.tags = ['User']
     #swagger.description = 'Endpoint para cadastrar um novo usuário.'
     #swagger.parameters['obj'] = {
-            in: 'body',
-            schema: { $ref: '#/definitions/CreateUser' }
+      in: 'body',
+      schema: { $ref: '#/definitions/CreateUser' }
     }
     #swagger.responses[201] = {
-            description: 'User criado com sucesso.',
-            schema: { $ref: '#/definitions/User' }
+      description: 'User criado com sucesso.',
+      schema: { $ref: '#/definitions/User' }
   } */
   userController.create(req, res)
 ));
 
 userRoute.use((req, res, next) => (
-  /* #swagger.parameters['obj'] = {
-            name: "authorization",
-            in: "header",
-            type: "string"
+  /*
+  #swagger.tags = ['User']
+  #swagger.parameters['obj'] = {
+    name: "authorization",
+    in: "header",
+    type: "string"
   }
   #swagger.security = [{
-               "bearerAuth": []
-        }]
-  
-            schema: { $ref: '#/definitions/CreateUser' }
-    } */
+    "bearerAuth": []
+  }]
+  */
   loginController.validationAuthenticator(req, res, next)
 ));
 userRoute.get('/user', (req, res) => (
-  /* #swagger.tags = ['User']
-    #swagger.description = 'Endpoint para obter todos os usuários.'
-    #swagger.responses[200] = {
-            description: 'Listagem de usuários obtida com sucesso.',
-            schema: { $ref: '#/definitions/UserArray' }
-    } */
+  /*
+  #swagger.description = 'Endpoint para obter todos os usuários.'
+  #swagger.responses[200] = {
+    description: 'Listagem de usuários obtida com sucesso.',
+    schema: { $ref: '#/definitions/UserArray' }
+  } */
   userController.read(req, res)
 ));
 
 userRoute.get('/user/info', (req, res) => (
-  /* #swagger.tags = ['User']
-   #swagger.description = 'Endpoint para obter um usuário especifico através de dados obtidos via token jwt.'
-   #swagger.responses[200] = {
-      description: 'Usuário obtido com sucesso.',
-        schema: { $ref: '#/definitions/User' }
+  /*
+  #swagger.description = 'Endpoint para obter um usuário especifico através de dados obtidos via token jwt.'
+  #swagger.responses[200] = {
+    description: 'Usuário obtido com sucesso.',
+    schema: { $ref: '#/definitions/User' }
   } */
   userController.readOne(req, res)
 ));
 
 userRoute.put('/user/:id', (req, res) => (
-  /* #swagger.tags = ['User']
-   #swagger.description = 'Endpoint para atualizar os dados de um usuário.'
-   #swagger.parameters['id'] = { description: 'ID do usuário.' }
-   #swagger.parameters['obj'] = {
-            in: 'body',
-            schema: { $ref: '#/definitions/CreateUser' }
-    }
-   #swagger.responses[200] = {
-      description: 'Usuário editado com sucesso.',
-        schema: { $ref: '#/definitions/User' }
-   } */
+  /*
+  #swagger.description = 'Endpoint para atualizar os dados de um usuário.'
+  #swagger.parameters['id'] = { description: 'ID do usuário.' }
+  #swagger.parameters['obj'] = {
+      in: 'body',
+      type: 'object',
+      schema: { $ref: '#/definitions/CreateUser' }
+  }
+  #swagger.responses[200] = {
+    description: 'Usuário editado com sucesso.',
+    schema: { $ref: '#/definitions/User' }
+  } */
   userController.update(req, res)
 ));
 
 userRoute.delete('/user/:id', (req, res) => (
-  /* #swagger.tags = ['User']
-    #swagger.description = 'Endpoint para deletar um usuário.'
-    #swagger.parameters['id'] = { description: 'ID do usuário.' }
-    #swagger.responses[204] = {
-      description: 'Usuário deletado com sucesso.',
+  /*
+  #swagger.description = 'Endpoint para deletar um usuário.'
+  #swagger.parameters['id'] = { description: 'ID do usuário.' }
+  #swagger.responses[204] = {
+    description: 'Usuário deletado com sucesso.',
   } */
   userController.delete(req, res)
 ));
